--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,74 @@ body {
   position: relative;
 }
 
+.modal {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity .2s ease, visiblity .2s ease;
+}
+
+.modal_visible{
+  display: flex;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  visibility: visible;
+  opacity: 1;
+  transition: opacity .2s ease, visiblity .2s ease;
+}
+
+.modal__container {
+  padding: 20px;
+  border: 1px solid black;
+  background-color: #414141;
+  color: white;
+  max-width: 50%;
+}
+
+.container__input {
+  width: 100%;
+  margin-top: 20px;
+  color: black;
+}
+
+.container__buttons{
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.container__title {
+  font-size: 1.25rem;
+}
+
+.button {
+  padding: 5px 15px;
+  border: none;
+  cursor: pointer;
+}
+
+.button_confirm {
+  background-color: #26e600;
+}
+
+.button_cancel {
+  background-color: rgb(240, 90, 90);
+}
+
 .cancel-button,
 .set-button {
   border: none;
