--- a/styles.css
+++ b/styles.css
@@ -327,7 +327,7 @@ input {
 .tools-bar select {
   border-radius: 5px;
   padding: 5px 10px;
-  background-color: silver;
+  /* background-color: silver; */
   flex-grow: 1;
   margin: auto 3px;
   max-height: 30px;
@@ -397,6 +397,7 @@ input {
   text-align: center;
   padding: 0;
   height: 25px;
+  background-color: silver;
 }
 
 .input__section {
@@ -451,4 +452,27 @@ input {
 
 .offset-input{
   height: 27px;
+}
+
+.undo-button {
+  /* display: none; */
+  background-color: #d9f170;
+}
+
+.toolbar__number-input{
+  /* display: none; */
+  background-color: silver;
+}
+
+.eraser-btn {
+  background-color: silver;
+  transition: background-color .2s ease;
+}
+
+.eraser-btn_on {
+  background-color: pink;
+}
+
+button {
+  cursor: pointer;
 }
